--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
-	<h1>HI</h1>
+	<h1>Hi, this is to test if the branching exercise is working.</h1>
+	<p>It is working!!</p>
+	<p>Or is it not working??</p>
 </body>
 </html>
